effects/kscreen: don't use xcb on Wayland

BUG: 450564
FIXED-IN: 5.24.5